--- a/cover.tex
+++ b/cover.tex
@@ -59,21 +59,21 @@ at the Academic Center of Agreste - Federal University of Pernambuco}
 
 \begin{document}
 
-\begin{letter}{To Simulation Modelling Practice and Theory}
+\begin{letter}{Computers \& Industrial Engineering}
     \setkomavar{subject}{Cover letter}
     \opening{Dear editor,}
 
-	Along with this letter, I am sending a paper in which I present the Multi-product Batch Processing Time Maximization (MPBPTM) problem, as well as a mathematical model and an analytical solution method with polynomial time complexity.
+	Along with this letter, I am sending a paper in which I present the Multi-product Batch Processing Time Maximization (MBPTM) problem, as well as a mathematical model and an analytical solution method with polynomial time complexity.
 	
-MPBPTM is a combinatorial optimization problem. The complexity of MPBPTM is mainly attributed to the fact that there is a production limit for the set of products and not just for each product. This restriction causes the problem to be defined as a non-polynomial problem.
+MBPTM is a combinatorial optimization problem. The complexity of MBPTM is mainly attributed to the fact that there is a production limit for the set of products and not just for each product. This restriction causes the problem to be defined as a non-polynomial problem.
 
-The problem was identified by me during the development of a solver for production planning in extruders. As I am applying a local search heuristic, at each iteration I need to generate a new solution, and therefore I need to solve the MPBPTM problem.
+The problem was identified by me during the development of a solver for production planning in extruders. As I am applying a local search heuristic, at each iteration I need to generate a new solution, and therefore I need to solve the MBPTM problem.
 
-However, MPBPTM is also a practical problem and its solution directly influences the efficiency of inventory control in some industries, as is the case of industries in the plastic bag sector.
+However, MBPTM is also a practical problem and its solution directly influences the efficiency of inventory control in some industries, as is the case of industries in the plastic bag sector.
 
-As is widely known, there are few combinatorial optimization problems that can be solved using exact methods. In this paper we present an exact optimization method for solving the MPBPTM problem, based on the idea of partitioning the problem into two smaller problems.
+As is widely known, there are few combinatorial optimization problems that can be solved using exact methods. In this paper we present an exact optimization method for solving the MBPTM problem, based on the idea of partitioning the problem into two smaller problems.
 
-I had a vague idea about the proposed method while I was presenting the problem to my co-workers, and I managed to develop the method the same day before going to sleep, as I was really excited about the idea of the method and about the impact that this method would generate for the performance of the solver I'm developing for production planning in extruders.
+I had a vague idea about the proposed method while I was presenting the problem to my co-workers, and I managed to develop the method the same day before going to sleep, as I was really engaged about the idea of the method and about the impact that this method would generate for the performance of the solver I'm developing for production planning in extruders.
 
 According to the bibliographic research carried out by the authors, the problem and exact method proposed in this paper has not yet been presented in the scientific literature.
 
